unpackaged/main/default/objects/Contact/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <label>AnnualRevenue</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>