unpackaged/main/default/objects/Contact/fields/Attandance__c.field-meta.xml
<CustomField>
    <fullName>Attandance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attandance</label>
    <referenceTo>Attandance__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>