unpackaged/main/default/objects/Contact/fields/CalculateDays__c.field-meta.xml
<CustomField>
    <fullName>CalculateDays__c</fullName>
    <formula>ABS(StartDate__c -  EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CalculateDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>