unpackaged/main/default/objects/Contact/fields/CELL__c.field-meta.xml
<CustomField>
    <fullName>CELL__c</fullName>
    <label>CELL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>