unpackaged/main/default/objects/Contact/fields/check_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>check_Formula_Field__c</fullName>
    <formula>IF(ISPICKVAL( LeadSource , &#39;Web&#39;) , &#39;APPLE&#39;, IF(ISPICKVAL(LeadSource , &#39;Phone Inquiry&#39;	), &#39;ORANGE&#39;, null) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>check_Formula_Field</label>
    <type>Text</type>
</CustomField>