unpackaged/main/default/objects/Contact/fields/ContactDelect__c.field-meta.xml
<CustomField>
    <fullName>ContactDelect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactDelect</label>
    <type>Checkbox</type>
</CustomField>