unpackaged/main/default/objects/Contact/fields/Course_Amount__c.field-meta.xml
<CustomField>
    <fullName>Course_Amount__c</fullName>
    <label>Course Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>