unpackaged/main/default/objects/Contact/fields/Course_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Details</label>
    <referenceTo>Course_Details__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>