unpackaged/main/default/objects/Contact/fields/discription__c.field-meta.xml
<CustomField>
    <fullName>discription__c</fullName>
    <label>discription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>