unpackaged/main/default/objects/Contact/fields/End_date1__c.field-meta.xml
<CustomField>
    <fullName>End_date1__c</fullName>
    <label>End date1</label>
    <type>Date</type>
</CustomField>