unpackaged/main/default/objects/Contact/fields/ERA_customer_ID__c.field-meta.xml
<CustomField>
    <fullName>ERA_customer_ID__c</fullName>
    <label>ERA_customer_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>