unpackaged/main/default/objects/Contact/fields/FNAME__c.field-meta.xml
<CustomField>
    <fullName>FNAME__c</fullName>
    <label>FNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>