unpackaged/main/default/objects/Contact/fields/Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Formula_Field__c</fullName>
    <formula>IF(CONTAINS(Account.BillingCity,&#39;&#39;)&amp;&amp;ISPICKVAL(LeadSource,&#39;Web&#39;)||ISPICKVAL(LeadSource,&#39;Other&#39;),TEXT(LeadSource),IF(NOT( ISBLANK(Account.BillingCity))  &amp;&amp;ISPICKVAL(LeadSource,&#39;&#39;),Account.BillingCity, &quot;defalut&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula_Field</label>
    <type>Text</type>
</CustomField>