unpackaged/main/default/objects/Contact/fields/Initial_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Amount__c</fullName>
    <label>Initial Amount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>