unpackaged/main/default/objects/Contact/fields/lastNamepopulate__c.field-meta.xml
<CustomField>
    <fullName>lastNamepopulate__c</fullName>
    <formula>IF( ISNULL( Country__c ) , LastName , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lastNamepopulate</label>
    <type>Text</type>
</CustomField>