unpackaged/main/default/objects/Contact/fields/LNAME__c.field-meta.xml
<CustomField>
    <fullName>LNAME__c</fullName>
    <label>LNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>