unpackaged/main/default/objects/Contact/fields/MARK_2__c.field-meta.xml
<CustomField>
    <fullName>MARK_2__c</fullName>
    <label>MARK_2</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>