unpackaged/main/default/objects/Contact/fields/NextServiceDate__c.field-meta.xml
<CustomField>
    <fullName>NextServiceDate__c</fullName>
    <label>NextServiceDate</label>
    <type>Date</type>
</CustomField>