unpackaged/main/default/objects/Contact/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patients</label>
    <length>20</length>
    <type>Text</type>
</CustomField>