unpackaged/main/default/objects/Contact/fields/PopulateCampaignName__c.field-meta.xml
<CustomField>
    <fullName>PopulateCampaignName__c</fullName>
    <label>PopulateCampaignName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>