unpackaged/main/default/objects/Contact/fields/PreviousDateValue__c.field-meta.xml
<CustomField>
    <fullName>PreviousDateValue__c</fullName>
    <label>PreviousDateValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>