unpackaged/main/default/objects/Contact/fields/Remainter_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remainter_Balance__c</fullName>
    <label>Remainter Balance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>