unpackaged/main/default/objects/Contact/fields/sales_servey_Q2__c.field-meta.xml
<CustomField>
    <fullName>sales_servey_Q2__c</fullName>
    <label>sales servey Q2</label>
    <type>TextArea</type>
</CustomField>