unpackaged/main/default/objects/Contact/fields/Select_Course__c.field-meta.xml
<CustomField>
    <fullName>Select_Course__c</fullName>
    <label>Select Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>SALESFORCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>