unpackaged/main/default/objects/Contact/fields/service_servey_A2__c.field-meta.xml
<CustomField>
    <fullName>service_servey_A2__c</fullName>
    <label>service servey A2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>