unpackaged/main/default/objects/Contact/fields/service_survey_A1__c.field-meta.xml
<CustomField>
    <fullName>service_survey_A1__c</fullName>
    <label>service survey A1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>