unpackaged/main/default/objects/Contact/fields/service_survey_id__c.field-meta.xml
<CustomField>
    <fullName>service_survey_id__c</fullName>
    <label>service survey id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>