unpackaged/main/default/objects/Contact/fields/service_survey_Q1__c.field-meta.xml
<CustomField>
    <fullName>service_survey_Q1__c</fullName>
    <label>service survey Q1</label>
    <type>TextArea</type>
</CustomField>