unpackaged/main/default/objects/Contact/fields/service_survey_Q2__c.field-meta.xml
<CustomField>
    <fullName>service_survey_Q2__c</fullName>
    <label>service survey Q2</label>
    <type>TextArea</type>
</CustomField>