unpackaged/main/default/objects/Contact/fields/slaes_servey_Q1__c.field-meta.xml
<CustomField>
    <fullName>slaes_servey_Q1__c</fullName>
    <label>slaes servey Q1</label>
    <type>TextArea</type>
</CustomField>