unpackaged/main/default/objects/Contact/fields/sles_servey_id__c.field-meta.xml
<CustomField>
    <fullName>sles_servey_id__c</fullName>
    <label>sles servey id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>