unpackaged/main/default/objects/Contact/fields/survey_submit_date__c.field-meta.xml
<CustomField>
    <fullName>survey_submit_date__c</fullName>
    <label>survey submit date</label>
    <type>Date</type>
</CustomField>