unpackaged/main/default/objects/Contact/fields/test_global__c.field-meta.xml
<CustomField>
    <fullName>test_global__c</fullName>
    <label>test global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>test_1</valueSetName>
    </valueSet>
</CustomField>