unpackaged/main/default/objects/Contact/fields/Vin_Number__c.field-meta.xml
<CustomField>
    <fullName>Vin_Number__c</fullName>
    <label>Vin_Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>