unpackaged/main/default/objects/Contact/recordTypes/TEST.recordType-meta.xml
<RecordType>
    <fullName>TEST</fullName>
    <active>true</active>
    <label>TEST</label>
</RecordType>