unpackaged/main/default/objects/Contact/validationRules/Minimum_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_10_Digits</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone)),
    LEN(Phone) &lt; 10
)</errorConditionFormula>
    <errorMessage>TO Check 10 Digits Number</errorMessage>
</ValidationRule>