unpackaged/main/default/objects/Contact/validationRules/To_check_correct_Mail.validationRule-meta.xml
<ValidationRule>
    <fullName>To_check_correct_Mail</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX(  Email , &quot;([A-Za-z0-9]+([!#$%&amp;&#39;*+-/=?^_`{|}~]*[A-Za-z0-9]+)*@[A-Za-z0-9\\-]+(\\.[A-Za-z0-9\\-]+)*[ ]*[,;]?[ ]*)+&quot; ))</errorConditionFormula>
    <errorMessage>To Check valid Mail</errorMessage>
</ValidationRule>